--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".activity.MainActivity">
 
         </activity>
+        <activity android:name=".activity.TabBarActivity"/>
     </application>
 
 </manifest>
